--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 
 <body>
     <h1>hi there</h1>
-    <p><em>founder and ceo of llm</em></p>
+    <p><em>bla bla</em></p>
     this is a test <br>
-    i love my wife
     <hr>
 
     <h3><strong>this is a sub title</strong></h3>
